                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 19-09-2006 updated: french language file
 - 19-09-2006 fixed: [ 1561135 ] video auto resume not work
 - 19-09-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 18-09-2006 changed: Layer change dvd reading only re-reads blocks if the entire block is NULL.
 - 18-09-2006 fixed: Flicker filter (and other) GUI settings showed "My Programs" instead of their integer level.
 - 18-09-2006 fixed: GUI Flicker filter wasn't applied on boot.
 - 18-09-2006 fixed: custom windows didn't fallback to default skin dirs.
 - 18-09-2006 fixed: .cdg files wouldn't work with library items launched using the http api.
 - 18-09-2006 changed: use DVDCSS_METHOD key instead of title, it will fallback to key if initial attempt fails. 
                       this could potentially cause troubles for dvd's where vobs have diffrent keys, but should speed up opening of most dvds
 - 18-09-2006 fixed: crash when stopping playback in dvdplayer, due too wrong thread trying to flush codecs.
 - 17-09-2006 improved: handling of vobs/mpeg's with a nonzero start pts. (mplayer.dll)
 - 17-09-2006 fixed: rewind on some movies would just lock picture untill a fastforward request was made (mplayer.dll)
 - 17-09-2006 fixed: udp:// where not working in mplayer.dll, still no multicast support but atleast you can stream directly from vlc (mplayer.dll)
 - 17-09-2006 fixed: some videos would not display any time, but would still have totaltime and progress (mplayer.dll)
 - 17-09-2006 fixed: audio delay returned from audio renderer's where way of for mplayer when resampling it was resampling audio.